--- a/package.json
+++ b/package.json
@@ -4,21 +4,44 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "server": "node server/index.js",
+    "start": "concurrently \"yarn dev\" \"yarn server\"",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.3",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "next": "12.2.0",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-query": "^3.39.1",
+    "tailwindcss": "^3.1.4",
+    "url-metadata": "^2.5.0",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
+    "concurrently": "^7.2.2",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^27.1.5",
     "typescript": "4.7.4"
   }
 }
